--- a/register.html
+++ b/register.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <div class="logo">
-            <a href="index.html"><img src="images/cat1.jpg" alt="" width="60" height="70"/></a> 
+            <a href="index.html"><img src="cat1.jpg" alt="" width="60" height="70"/></a> 
                
         </div>
         <h1>Cats</h1>
@@ -88,10 +88,10 @@
 
             <div class="contact_us">
                 <h3>Reach out to us</h3>
-                <a href="#"><img src="images/facebook.svg" alt="facebook"/></a>
-                <a href="#"><img src="images/twitter.svg" alt="Twitter"/></a>
-                <a href="#"><img src="images/instagram.svg" alt="Instagram"/></a>
-                <a href="#"><img src="images/gmail.svg" alt="Gmail"/></a>
+                <a href="#"><img src="facebook.svg" alt="facebook"/></a>
+                <a href="#"><img src="twitter.svg" alt="Twitter"/></a>
+                <a href="#"><img src="instagram.svg" alt="Instagram"/></a>
+                <a href="#"><img src="gmail.svg" alt="Gmail"/></a>
             </div>
             <div class="quick_links">
                 <h3>Quick Links</h3>
