--- a/about.html
+++ b/about.html
@@ -40,7 +40,7 @@
     <main>
         <h3>Thinking about getting a cat but not sure which breed is right for you? We can help.</h3>
        <div class="Cat_info">
-        <img src="images/Abyssinian Cat .jpg" alt="cat" />
+        <img src="Abyssinian Cat .jpg" alt="cat" />
         <div class="Cat_infoDetailed">
             <h2>Abyssinian Cat</h2>
             <p>Abyssinians are highly intelligent and intensely inquisitive.They love to investigate and will leave no nook or cranny unexplored. They’re sometimes referred to as “Aby-grabbys” because they tend to take things that grab their interest. The playful Aby loves to jump and climb</p>
@@ -51,7 +51,7 @@
        </div>
 
        <div class="Cat_info">
-        <img src="images/bombay_cat.jpg" alt="cat" />
+        <img src="bombay_cat.jpg" alt="cat" />
         <div class="Cat_infoDetailed">
             <h2>Bombay Cat</h2>
             <p>The Bombay is an easy-going, yet energetic cat. She does well in quiet apartments where she’s the center of attention as well as in lively homes with children and other pets. She’ll talk to you in a distinct voice, and you’re likely to find her in the warmest spot in your home, whether that’s in the sunlight from a window or curled up under the covers in bed with you</p>
@@ -62,7 +62,7 @@
        </div>
 
        <div class="Cat_info">
-        <img src="images/egyptian_cat.jpg" alt="cat" />
+        <img src="egyptian_cat.jpg" alt="cat" />
         <div class="Cat_infoDetailed">
             <h2>Egyptian Cat</h2>
             <p>The Egyptian Mau is fiercely devoted to her humans and vocally shows signs of happiness and affection by meowing in a pleasant voice. She’ll also slowly swish her tail and knead with her front paws. She loves to display her hunting skills by chasing and retrieving a toy. As a moderate- to highly active breed, you may find her on top of your refrigerator or bookshelves.
@@ -74,7 +74,7 @@
        </div>
 
        <div class="Cat_info">
-        <img src="images/manx_cat.jpg" alt="cat" />
+        <img src="manx_cat.jpg" alt="cat" />
         <div class="Cat_infoDetailed">
             <h2>Manx Cat</h2>
             <p>When she’s not hunting bugs or rodents or standing guard, the Manx is an affectionate, even-tempered and playful cat. She loves to follow her favorite person from room to room and curling up on their lap for a snooze. Your Manx will even carry on a conversation with you in her quiet trill.
@@ -84,7 +84,7 @@
        </div>
 
        <div class="Cat_info">
-        <img src="images/laPerm_cat.jpg" alt="cat" />
+        <img src="laPerm_cat.jpg" alt="cat" />
         <div class="Cat_infoDetailed">
             <h2>LaPerm Cat</h2>
             <p>Distinguished by her curly, rippled coat and people-oriented personality, the LaPerm is calm and friendly, yet at other times energetic and inquisitive. This feline thrives on attention and likes to be close to her human companions. Though curious, this breed is content to be a lap cat and close to whatever is going on. The LaPerm blossoms with a loving family.
@@ -111,10 +111,10 @@
 
             <div class="contact_us">
                 <h3>Reach out to us</h3>
-                <a href="#"><img src="images/facebook.svg" alt="facebook"/></a>
-                <a href="#"><img src="images/twitter.svg" alt="Twitter"/></a>
-                <a href="#"><img src="images/instagram.svg" alt="Instagram"/></a>
-                <a href="#"><img src="images/gmail.svg" alt="Gmail"/></a>
+                <a href="#"><img src="facebook.svg" alt="facebook"/></a>
+                <a href="#"><img src="twitter.svg" alt="Twitter"/></a>
+                <a href="#"><img src="instagram.svg" alt="Instagram"/></a>
+                <a href="#"><img src="gmail.svg" alt="Gmail"/></a>
             </div>
             <div class="quick_links">
                 <h3>Quick Links</h3>
