--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
    
     <header>
         <div class="logo">
-            <a href="index.html"><img src="images/cat1.jpg" alt="" width="60" height="70"/></a> 
+            <a href="index.html"><img src="cat1.jpg" alt="" width="60" height="70"/></a> 
                
         </div>
         <h1>Cats</h1>
@@ -52,7 +52,7 @@
         </div>
         
         <div class="main-wrapper">
-            <img src="images/main-cat.svg" alt="main cat" class="main_logo"/>
+            <img src="main-cat.svg" alt="main cat" class="main_logo"/>
         </div>
 
     </div>
@@ -65,39 +65,39 @@
         <div class="cards">
             <div class="card">
                 <h2>Persian Cat</h2>
-                <img src="images/Persian Cat.jpg" alt="cat on card" />
+                <img src="Persian Cat.jpg" alt="cat on card" />
 <p>The Persian cat, also known as the Persian longhair, is a long-haired breed of cat characterized by a round face and short muzzle</p>                <a class="readMore_btn" href="#">Read More</a>
             </div>
 
             <div class="card">
                 <h2>Siamese cat</h2>
-                <img src="images/Siamese cat.jpg" alt="cat on card" />
+                <img src="Siamese cat.jpg" alt="cat on card" />
 <p>The Siamese cat is one of the first distinctly recognized breeds of Asian cat. Derived from the Wichianmat landrace, one of several varieties of cat native to Thailand, the original Siamese became one of the most popular breeds in Europe and North America in the 19th century</p>
                <a class="readMore_btn" href="#">Read More</a>
             </div>
 
             <div class="card">
                 <h2>Ragdoll</h2>
-                <img src="images/Ragdoll.jpg" alt="cat on card" />
+                <img src="Ragdoll.jpg" alt="cat on card" />
 <p>The Ragdoll is a breed of cat with a distinct colorpoint coat and blue eyes. Its morphology is large and weighty, and it has a semi-long and silky soft coat. American breeder Ann Baker developed Ragdolls in the 1960s</p>
            <a class="readMore_btn" href="#">Read More</a>
             </div>
 
             <div class="card">
                 <h2>Birman</h2>
-                <img src="images/Birman.jpg" alt="cat on card" />
+                <img src="Birman.jpg" alt="cat on card" />
 <p>The Birman, also called the "Sacred Cat of Burma", is a domestic cat breed. The Birman is a long-haired, colour-pointed cat distinguished by a silky coat, deep blue eyes, and contrasting white "gloves" on each paw.</p>                <a class="readMore_btn" href="#">Read More</a>
             </div>
 
             <div class="card">
                 <h2>Exotic Shorthair</h2>
-                <img src="images/Exotic Shorthair.jpg" alt="cat on card" />
+                <img src="Exotic Shorthair.jpg" alt="cat on card" />
 <p>The Exotic Shorthair is a breed of cat developed as a short-haired version of the Persian.</p>                <a class="readMore_btn" href="#">Read More</a>
             </div>
 
             <div class="card">
                 <h2>Scottish Fold</h2>
-                <img src="images/Scottish Fold.jpg" alt="cat on card" />
+                <img src="Scottish Fold.jpg" alt="cat on card" />
 <p>The Scottish Fold is a breed of domestic cat with a natural dominant gene mutation that affects cartilage throughout the body, causing the ears to "fold", bending forward and down towards the front of the head, which gives the cat what is often described as an "owl-like" appearance.</p>                <a class="readMore_btn" href="#">Read More</a>
             </div>
 
@@ -120,10 +120,10 @@
 
             <div class="contact_us">
                 <h3>Reach out to us</h3>
-                <a href="#"><img src="images/facebook.svg" alt="facebook"/></a>
-                <a href="#"><img src="images/twitter.svg" alt="Twitter"/></a>
-                <a href="#"><img src="images/instagram.svg" alt="Instagram"/></a>
-                <a href="#"><img src="images/gmail.svg" alt="Gmail"/></a>
+                <a href="#"><img src="facebook.svg" alt="facebook"/></a>
+                <a href="#"><img src="twitter.svg" alt="Twitter"/></a>
+                <a href="#"><img src="instagram.svg" alt="Instagram"/></a>
+                <a href="#"><img src="gmail.svg" alt="Gmail"/></a>
             </div>
             <div class="quick_links">
                 <h3>Quick Links</h3>
