--- a/register.html
+++ b/register.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/register_style.css">
+    <link rel="stylesheet" href="register_style.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins&family=Roboto+Condensed&display=swap" rel="stylesheet">
     <title>Registration Form</title>
 </head>
 <body>
     <header>
         <div class="logo">
-            <a href="index.html"><img src="images/cat1.jpg" alt="" width="60" height="70"/></a> 
+            <a href="index.html"><img src="cat1.jpg" alt="" width="60" height="70"/></a> 
                
         </div>
         <div class="heading">
