--- a/about.html
+++ b/about.html
@@ -117,10 +117,10 @@
 
             <div class="contact_us">
                 <h2>Reach out to us</h2>
-                <a href="#"><img src="images/facebook.svg" alt="facebook"/></a>
-                <a href="#"><img src="images/twitter.svg" alt="Twitter"/></a>
-                <a href="#"><img src="images/instagram.svg" alt="Instagram"/></a>
-                <a href="#"><img src="images/gmail.svg" alt="Gmail"/></a>
+                <a href="#"><img src="facebook.svg" alt="facebook"/></a>
+                <a href="#"><img src="twitter.svg" alt="Twitter"/></a>
+                <a href="#"><img src="instagram.svg" alt="Instagram"/></a>
+                <a href="#"><img src="gmail.svg" alt="Gmail"/></a>
             </div>
             <div class="quick_links">
                 <h2>Quick Links</h2>
